--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c8dcf">  <td>23/06/19 21:38:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@7ea9e1e2]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@693800557</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/06/19 21:39:05</td>   <td>9523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@7ea9e1e2]">scenarioTc6</td> 
-  <td>TestNG-tests-1@693800557</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/06/20 11:34:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase3.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase3@7e5afaa6]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/06/20 11:35:35</td>   <td>49560</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase5.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase5@28f3b248]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="8385ad">  <td>23/06/20 11:36:50</td>   <td>125239</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@1b1426f4]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/06/20 11:32:57</td>   <td>-108079</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase1@6f46426d]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/06/20 11:35:43</td>   <td>58101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.scenarioTc5()[pri:0, instance:automationExercise.testCases.TestCase5@28f3b248]">scenarioTc5</td> 
+  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/06/20 11:33:49</td>   <td>-56429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.createAcct()[pri:0, instance:automationExercise.testCases.TestCase2@483f6d77]">&gt;&gt;createAcct</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/06/20 11:34:24</td>   <td>-20854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.scenarioTc2()[pri:0, instance:automationExercise.testCases.TestCase2@483f6d77]">scenarioTc2</td> 
+  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="8385ad">  <td>23/06/20 11:37:04</td>   <td>139007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@1b1426f4]">scenarioTc6</td> 
+  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/06/20 11:34:52</td>   <td>6484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase3@7e5afaa6]">scenarioTc3</td> 
+  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/06/20 11:34:56</td>   <td>10725</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase4.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase4@63a12c68]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/06/20 11:35:01</td>   <td>15990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase4.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase4@63a12c68]">scenarioTc3</td> 
+  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/06/20 11:33:39</td>   <td>-66697</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase2@483f6d77]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/06/20 11:33:05</td>   <td>-99925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.scenarioTc1()[pri:0, instance:automationExercise.testCases.TestCase1@6f46426d]">scenarioTc1</td> 
+  <td>TestNG-tests-1@7136580</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/06/20 11:33:51</td>   <td>-53923</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase2@25fb8912]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/06/20 11:35:18</td>   <td>32394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase3@7c24b813]">scenarioTc3</td> 
+  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/06/20 11:36:17</td>   <td>91488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.scenarioTc5()[pri:0, instance:automationExercise.testCases.TestCase5@7bd4937b]">scenarioTc5</td> 
+  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/06/20 11:35:33</td>   <td>47665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase4.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase4@2c35e847]">scenarioTc3</td> 
+  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/06/20 11:36:05</td>   <td>79871</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase5.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase5@7bd4937b]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/06/20 11:34:06</td>   <td>-38763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.createAcct()[pri:0, instance:automationExercise.testCases.TestCase2@25fb8912]">&gt;&gt;createAcct</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="8385ad">  <td>23/06/20 11:37:33</td>   <td>168174</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@21e360a]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/06/20 11:35:11</td>   <td>25405</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase3.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase3@7c24b813]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/06/20 11:33:11</td>   <td>-94075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.scenarioTc1()[pri:0, instance:automationExercise.testCases.TestCase1@f5acb9d]">scenarioTc1</td> 
+  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/06/20 11:34:42</td>   <td>-3453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.scenarioTc2()[pri:0, instance:automationExercise.testCases.TestCase2@25fb8912]">scenarioTc2</td> 
+  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="8385ad">  <td>23/06/20 11:37:40</td>   <td>175249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@21e360a]">scenarioTc6</td> 
+  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/06/20 11:32:57</td>   <td>-108092</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase1@f5acb9d]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/06/20 11:35:24</td>   <td>38537</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase4.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase4@2c35e847]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1788528856</td>   <td></td> </tr>
 </table>
