--- a/test-output/index.html
+++ b/test-output/index.html
@@ -124,12 +124,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationExercise.testCases.TestCase4" class="method navigator-link" hash-for-method="scenarioTc3">scenarioTc3</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="automationExercise.testCases.TestCase3" class="method navigator-link" hash-for-method="scenarioTc3">scenarioTc3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="automationExercise.testCases.TestCase3" class="method navigator-link" hash-for-method="scenarioTc3">scenarioTc3</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="automationExercise.testCases.TestCase4" class="method navigator-link" hash-for-method="scenarioTc3">scenarioTc3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -221,28 +221,6 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automationExercise.testCases.TestCase1</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="scenarioTc1">
-                  </a> <!-- scenarioTc1 -->
-                  <span class="method-name">scenarioTc1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="scenarioTc1">
-                  </a> <!-- scenarioTc1 -->
-                  <span class="method-name">scenarioTc1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">automationExercise.testCases.TestCase5</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -258,6 +236,28 @@
                   <a name="scenarioTc5">
                   </a> <!-- scenarioTc5 -->
                   <span class="method-name">scenarioTc5</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">automationExercise.testCases.TestCase1</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="scenarioTc1">
+                  </a> <!-- scenarioTc1 -->
+                  <span class="method-name">scenarioTc1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="scenarioTc1">
+                  </a> <!-- scenarioTc1 -->
+                  <span class="method-name">scenarioTc1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -382,51 +382,51 @@ data.addRows(12);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'scenarioTc5')
 data.setCell(0, 2, 'automationExercise.testCases.TestCase5')
-data.setCell(0, 3, 76682);
+data.setCell(0, 3, 66351);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'scenarioTc5')
 data.setCell(1, 2, 'automationExercise.testCases.TestCase5')
-data.setCell(1, 3, 67136);
+data.setCell(1, 3, 61651);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'scenarioTc1')
 data.setCell(2, 2, 'automationExercise.testCases.TestCase1')
-data.setCell(2, 3, 40147);
+data.setCell(2, 3, 46177);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'scenarioTc3')
-data.setCell(3, 2, 'automationExercise.testCases.TestCase4')
-data.setCell(3, 3, 33567);
+data.setCell(3, 1, 'scenarioTc1')
+data.setCell(3, 2, 'automationExercise.testCases.TestCase1')
+data.setCell(3, 3, 37112);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'scenarioTc1')
-data.setCell(4, 2, 'automationExercise.testCases.TestCase1')
-data.setCell(4, 3, 33223);
+data.setCell(4, 1, 'scenarioTc3')
+data.setCell(4, 2, 'automationExercise.testCases.TestCase4')
+data.setCell(4, 3, 33577);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'scenarioTc3')
 data.setCell(5, 2, 'automationExercise.testCases.TestCase4')
-data.setCell(5, 3, 32204);
+data.setCell(5, 3, 32432);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'scenarioTc2')
 data.setCell(6, 2, 'automationExercise.testCases.TestCase2')
-data.setCell(6, 3, 28856);
+data.setCell(6, 3, 31958);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'scenarioTc2')
 data.setCell(7, 2, 'automationExercise.testCases.TestCase2')
-data.setCell(7, 3, 20851);
+data.setCell(7, 3, 30836);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'scenarioTc6')
 data.setCell(8, 2, 'automationExercise.testCases.TestCase6')
-data.setCell(8, 3, 17169);
+data.setCell(8, 3, 20995);
 data.setCell(9, 0, 9)
 data.setCell(9, 1, 'scenarioTc6')
 data.setCell(9, 2, 'automationExercise.testCases.TestCase6')
-data.setCell(9, 3, 15935);
+data.setCell(9, 3, 14819);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'scenarioTc3')
 data.setCell(10, 2, 'automationExercise.testCases.TestCase3')
-data.setCell(10, 3, 6140);
+data.setCell(10, 3, 10059);
 data.setCell(11, 0, 11)
 data.setCell(11, 1, 'scenarioTc3')
 data.setCell(11, 2, 'automationExercise.testCases.TestCase3')
-data.setCell(11, 3, 4237);
+data.setCell(11, 3, 6663);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -459,129 +459,141 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase1</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">initialSetup(6666)</span>
+                <span class="method-name">initialSetup(5555)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
-                <span class="method-name">initialSetup(5555)</span>
-                <span class="method-start">17 ms</span>
+                <span class="method-name">initialSetup(6666)</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc1</span>
-                <span class="method-start">8172 ms</span>
+                <span class="method-start">15414 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">scenarioTc1</span>
-                <span class="method-start">14022 ms</span>
+                <span class="method-start">16180 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase2</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(5555)</span>
-                <span class="method-start">41399 ms</span>
+                <span class="method-start">52538 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">createAcct</span>
-                <span class="method-start">51668 ms</span>
+                <span class="method-start">59700 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(6666)</span>
-                <span class="method-start">54173 ms</span>
+                <span class="method-start">62363 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">createAcct</span>
-                <span class="method-start">69334 ms</span>
+                <span class="method-start">75999 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc2</span>
-                <span class="method-start">87243 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">scenarioTc2</span>
-                <span class="method-start">104644 ms</span>
+                <span class="method-start">81379 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase3</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(5555)</span>
-                <span class="method-start">108097 ms</span>
+                <span class="method-start">112217 ms</span>
               </div> <!-- configuration-class before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationExercise.testCases.TestCase2</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">scenarioTc2</span>
+                <span class="method-start">112457 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationExercise.testCases.TestCase3</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">scenarioTc3</span>
-                <span class="method-start">114581 ms</span>
+                <span class="method-start">121120 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase4</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(5555)</span>
-                <span class="method-start">118822 ms</span>
+                <span class="method-start">131181 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc3</span>
-                <span class="method-start">124087 ms</span>
+                <span class="method-start">137108 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase3</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(6666)</span>
-                <span class="method-start">133502 ms</span>
+                <span class="method-start">144416 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc3</span>
-                <span class="method-start">140491 ms</span>
+                <span class="method-start">154821 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase4</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(6666)</span>
-                <span class="method-start">146634 ms</span>
+                <span class="method-start">161485 ms</span>
               </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">scenarioTc3</span>
-                <span class="method-start">155762 ms</span>
-              </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase5</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(5555)</span>
-                <span class="method-start">157656 ms</span>
+                <span class="method-start">170686 ms</span>
               </div> <!-- configuration-class before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationExercise.testCases.TestCase4</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">scenarioTc3</span>
+                <span class="method-start">176726 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">automationExercise.testCases.TestCase5</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">scenarioTc5</span>
-                <span class="method-start">166198 ms</span>
+                <span class="method-start">179729 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(6666)</span>
-                <span class="method-start">187968 ms</span>
+                <span class="method-start">209160 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc5</span>
-                <span class="method-start">199585 ms</span>
+                <span class="method-start">217779 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">automationExercise.testCases.TestCase6</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(5555)</span>
-                <span class="method-start">233336 ms</span>
+                <span class="method-start">241381 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc6</span>
-                <span class="method-start">247104 ms</span>
+                <span class="method-start">251118 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class before">
                 <span class="method-name">initialSetup(6666)</span>
-                <span class="method-start">276271 ms</span>
+                <span class="method-start">284131 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">scenarioTc6</span>
-                <span class="method-start">283346 ms</span>
+                <span class="method-start">299516 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
